--- a/container-images/tcib/base/os/ironic-base/ironic-inspector/ironic-inspector.yaml
+++ b/container-images/tcib/base/os/ironic-base/ironic-inspector/ironic-inspector.yaml
@@ -1,6 +1,6 @@
 tcib_actions:
+- run: bash /usr/local/bin/uid_gid_manage {{ tcib_user }}
 - run: dnf -y install {{ tcib_packages['common'] | join(' ') }} && dnf clean all && rm -rf /var/cache/dnf
-- run: usermod -a -G kolla {{ tcib_user }}
 - run: ln -s /usr/share/openstack-tripleo-common/healthcheck/ironic-inspector /openstack/healthcheck && chmod a+rx /openstack/healthcheck
 tcib_packages:
   common:
