--- a/container-images/tcib/base/os/nova-base/nova-base.yaml
+++ b/container-images/tcib/base/os/nova-base/nova-base.yaml
@@ -1,6 +1,6 @@
 tcib_actions:
+- run: bash /usr/local/bin/uid_gid_manage nova
 - run: mkdir -p /etc/ssh && touch /etc/ssh/ssh_known_host
 - run: dnf install -y {{ tcib_packages | join(' ') }} && dnf clean all && rm -rf /var/cache/dnf
-- run: usermod -a -G kolla nova
 tcib_packages:
 - openstack-nova-common
