--- a/container-images/tcib/base/etcd/etcd.yaml
+++ b/container-images/tcib/base/etcd/etcd.yaml
@@ -1,4 +1,5 @@
 tcib_actions:
+- run: bash /usr/local/bin/uid_gid_manage {{ tcib_user }}
 - run: dnf -y install {{ tcib_packages.common | join(' ') }} && dnf clean all && rm -rf /var/cache/dnf
 - run: ln -s /usr/share/openstack-tripleo-common/healthcheck/etcd /openstack/healthcheck && chmod a+rx /openstack/healthcheck
 tcib_packages:
