--- a/container-images/tcib/base/memcached/memcached.yaml
+++ b/container-images/tcib/base/memcached/memcached.yaml
@@ -1,7 +1,6 @@
 tcib_actions:
+- run: bash /usr/local/bin/uid_gid_manage {{ tcib_user }}
 - run: dnf install -y {{ tcib_packages['common'] | join(' ') }} && dnf clean all && rm -rf /var/cache/dnf
-- run: usermod -a -G kolla {{ tcib_user }}
-- run: mkdir -p /run/memcache && chown -R memcached:memcached /run/memcache
 - run: ln -s /usr/share/openstack-tripleo-common/healthcheck/memcached /openstack/healthcheck && chmod a+rx /openstack/healthcheck
 tcib_packages:
   common:
