--- a/container-images/tcib/base/os/cinder-base/cinder-base.yaml
+++ b/container-images/tcib/base/os/cinder-base/cinder-base.yaml
@@ -1,7 +1,7 @@
 tcib_actions:
+- run: bash /usr/local/bin/uid_gid_manage cinder
 - run: if [ '{{ tcib_distro }}' == 'rhel' ]; then {% for item in tcib_packages.modules %}{% set key, value = (item.items() | list).0 %}dnf module -y {{ key }} {{ value }}; {% endfor %}fi
 - run: dnf -y install {{ tcib_packages.common | join(' ') }} && dnf clean all && rm -rf /var/cache/dnf
-- run: usermod -a -G kolla cinder
 tcib_packages:
   common:
   - ceph-common
