--- a/container-images/tcib/base/os/designate-base/designate-base.yaml
+++ b/container-images/tcib/base/os/designate-base/designate-base.yaml
@@ -1,6 +1,6 @@
 tcib_actions:
+- run: bash /usr/local/bin/uid_gid_manage designate
 - run: dnf -y install {{ tcib_packages.common | join(' ') }} && dnf clean all && rm -rf /var/cache/dnf
-- run: usermod -a -G kolla designate
 tcib_packages:
   common:
   - openstack-designate-common
