--- a/container-images/tcib/base/os/ironic-base/ironic-base.yaml
+++ b/container-images/tcib/base/os/ironic-base/ironic-base.yaml
@@ -1,6 +1,6 @@
 tcib_actions:
+- run: bash /usr/local/bin/uid_gid_manage ironic
 - run: dnf -y install {{ tcib_packages['common'] | join(' ') }} && dnf clean all && rm -rf /var/cache/dnf
-- run: usermod -a -G kolla ironic
 tcib_packages:
   common:
   - openstack-ironic-common
