--- a/container-images/tcib/base/os/manila-base/manila-base.yaml
+++ b/container-images/tcib/base/os/manila-base/manila-base.yaml
@@ -1,6 +1,6 @@
 tcib_actions:
+- run: bash /usr/local/bin/uid_gid_manage manila
 - run: dnf -y install {{ tcib_packages.common | join(' ') }} && dnf clean all && rm -rf /var/cache/dnf
-- run: usermod -a -G kolla manila
 tcib_packages:
   common:
   - openstack-manila
