--- a/container-images/tcib/base/os/neutron-base/neutron-base.yaml
+++ b/container-images/tcib/base/os/neutron-base/neutron-base.yaml
@@ -1,6 +1,6 @@
 tcib_actions:
+- run: bash /usr/local/bin/uid_gid_manage neutron
 - run: dnf -y install {{ tcib_packages['common'] | join(' ') }} && dnf clean all && rm -rf /var/cache/dnf
-- run: usermod -a -G kolla neutron
 - copy: /usr/share/tripleo-common/container-images/kolla/neutron-base/neutron_sudoers /etc/sudoers.d/neutron_sudoers
 - run: chmod 440 /etc/sudoers.d/neutron_sudoers
 # TODO(emilien) add support for tripleo-common being installed from source
