--- a/container-images/tcib/base/os/novajoin-base/novajoin-base.yaml
+++ b/container-images/tcib/base/os/novajoin-base/novajoin-base.yaml
@@ -1,6 +1,6 @@
 tcib_actions:
+- run: bash /usr/local/bin/uid_gid_manage novajoin
 - run: dnf -y install {{ tcib_packages.common | join(' ') }} && dnf clean all && rm -rf /var/cache/dnf
-- run: usermod -a -G kolla novajoin
 tcib_packages:
   common:
   - python3-novajoin
