--- a/container-images/tcib/base/os/octavia-base/octavia-base.yaml
+++ b/container-images/tcib/base/os/octavia-base/octavia-base.yaml
@@ -1,6 +1,6 @@
 tcib_actions:
+- run: bash /usr/local/bin/uid_gid_manage octavia
 - run: dnf -y install {{ tcib_packages.common | join(' ') }} && dnf clean all && rm -rf /var/cache/dnf
-- run: usermod -a -G kolla octavia
 tcib_packages:
   common:
   - openstack-octavia-common
