--- a/playbooks/roles/octavia-controller-config/tasks/main.yml
+++ b/playbooks/roles/octavia-controller-config/tasks/main.yml
@@ -1,4 +1,19 @@
 ---
+# Copyright 2020 Red Hat, Inc.
+# All Rights Reserved.
+#
+# Licensed under the Apache License, Version 2.0 (the "License"); you may
+# not use this file except in compliance with the License. You may obtain
+# a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
+# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
+# License for the specific language governing permissions and limitations
+# under the License.
+
   - name: gathering controller host name
     command: "hostname -f"
     register: hostname
@@ -7,9 +22,8 @@
       node_hostname: "{{ hostname.stdout }}"
   - include_tasks: certificate.yml
     when:
-      - private_key_content|length > 0
-      - ca_cert_content|length > 0
-      - service_pem_content|length > 0
+      - generate_certs | bool
+      - update_certs | bool
   - include_tasks: netport.yml
   - include_tasks: netinterface.yml
   - name: making sure octavia common configuration directory exists
